<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_my_profile_add_image"
        android:icon="@drawable/ic_add_image_black"
        android:title="@string/menu_add_image"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_my_profile_add_place"
        android:icon="@drawable/ic_add_business_black"
        android:title="@string/menu_add_place_business"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_my_profile_edit"
        android:icon="@drawable/ic_edit_black"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_my_profile_sign_out"
        android:icon="@drawable/ic_edit_black"
        android:title="@string/menu_sign_out"
        app:showAsAction="never"/>

</menu>