<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ContactUsPage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact_us"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ToolbarTheme"
            app:navigationIcon="?homeAsUpIndicator" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_contact_us_main"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/hey_ranchites"
                android:src="@drawable/ranchites_app_logo" />


            <TextView
                android:id="@+id/txt_check_policies"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_contact_us_main"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/check_policies" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                
                <TextView
                    android:id="@+id/txt_privacy_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_contact_us_title"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="12dp"
                    android:text="@string/privacy_policy_link" />
                <TextView
                    android:id="@+id/txt_terms_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_contact_us_title"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="12dp"
                    android:text="@string/terms_and_conditions_link" />
            </androidx.appcompat.widget.LinearLayoutCompat>




            <TextView
                android:id="@+id/txt_contact_us_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_contact_us_main"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/query_contact_us_at" />



            <TextView
                android:id="@+id/txt_contact_us_email_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_contact_us_title"
                android:autoLink="email"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="4dp"
                android:text="@string/query_contact_email" />



            <TextView
                android:id="@+id/txt_contact_us_business_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_contact_us_email_query"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/for_business_contact_us_at" />

            <TextView
                android:id="@+id/txt_contact_us_phone_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_contact_us_business_title"
                android:layout_margin="12dp"
                android:autoLink="phone"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/for_business_phone" />

            <TextView
                android:id="@+id/txt_contact_us_email_busniess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_contact_us_phone_business"
                android:autoLink="email"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/for_business_email" />

            <TextView
                android:id="@+id/txt_contact_us_ig_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_contact_us_email_busniess"
                android:gravity="center"
                android:text="@string/for_business_ig"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:layout_margin="12dp"
                style="@style/TextAppearance.AppCompat.Subhead"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>