<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.MyPlacesMainFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_my_place_main_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/my_place_business"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:padding="16dp"
                />
        </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main_page_my_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/material_my_place_main_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible"
        />

        <RelativeLayout
            android:id="@+id/main_my_place_error_relative_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/material_my_place_main_parent"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/txt_main_page_no_places_found_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_my_place_no_place_found"
                android:gravity="center"
                android:layout_margin="20dp"
                style="@style/TextAppearance.AppCompat.Subhead"
                />

            <TextView
                android:id="@+id/txt_main_page_no_place_msg_guide"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_main_page_no_places_found_error"
                android:layout_centerHorizontal="true"
                android:text="@string/main_my_place_no_place_guide_msg" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/txt_main_page_no_place_msg_guide"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_here"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    style="@style/TextAppearance.AppCompat.Button"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_main_my_place_add_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ques_black"
                    android:backgroundTint="@color/on_boarding_third_page_bg"
                    app:fabSize="mini"
                    app:fabCustomSize="30dp"
                    android:contentDescription="@string/tap_here" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatBtnAddNewPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/add"
            app:backgroundTint="@color/on_boarding_second_page_bg"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_add_business_black"
            app:srcCompat="@drawable/ic_near_me" />
    </RelativeLayout>

</FrameLayout>